src/objects/VPO__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ctr__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ctr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Note__c</fullName>
        <label>Device Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <description>Exit Reason</description>
        <label>Exit Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Officer__c</fullName>
        <label>Field Officer ID</label>
        <referenceTo>Field_Officer__c</referenceTo>
        <relationshipLabel>VPOs</relationshipLabel>
        <relationshipName>VPOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPI_Score__c</fullName>
        <label>PPI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Details__c</fullName>
        <label>Person ID</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>VPOs</relationshipLabel>
        <relationshipName>VPOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPO_Status__c</fullName>
        <label>VPO Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>VPO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VPO_View</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>Field_Officer__c</columns>
        <columns>Deployment_Date__c</columns>
        <columns>PPI_Score__c</columns>
        <columns>Area__c</columns>
        <columns>Exit_Date__c</columns>
        <columns>VPO_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>VPO View</label>
    </listViews>
    <nameField>
        <label>VPO ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VPOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>